Add session titles to the time table

--- a/index.html
+++ b/index.html
@@ -304,15 +304,15 @@ layout: default
 						<p class="time">[12:25-12:45]</p>
 					</li>
 					<li class="bg-light duration-15min">
-						<h3 class="session-title">ルネサスエレクトロニクス株式会社様　ご登壇予定</h3>
+						<h3 class="session-title">ロボット覚醒プロジェクト取り組み紹介<span class="speaker"> / ルネサスエレクトロニクス株式会社　岡宮 由樹 様</h3>
 						<p class="time">[12:50-13:05]</p>
 					</li>
 					<li class="bg-dark duration-20min break-5min">
 						<h3 class="session-title"><a href="#coderdojo-minecraft" class="js-session-detail-trigger">Minecraftによるプログラミング学習の可能性<span class="speaker"> / 寺園 聖文</span></a></h3>
 						<p class="time">[13:05-13:25]</p>
 					</li>
-					<li class="bg-light duration-15min">
-						<h3 class="session-title">DigitalCube様　ご登壇予定</h3>
+					<li class="bg-light duration-15min digitalcube">
+						<h3 class="session-title">How to contributing to the community. Why it's important to your life or business.<span class="speaker"> / 株式会社デジタルキューブ　小賀 浩通 様</span></h3>
 						<p class="time">[13:30-13:45]</p>
 					</li>
 					<li class="bg-dark duration-20min break-5min">
