Improve styles for long session titles

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ layout: default
 						<h3 class="session-title"><a href="#blocklyduino" class="js-session-detail-trigger">子供でもArduinoを楽しめるBlocklyDuinoの紹介<span class="speaker"> / 岡田 裕行</span></a></h3>
 						<p class="time">[11:45-12:05]</p>
 					</li>
-					<li class="bg-light duration-10min">
+					<li class="bg-light duration-10min uchida">
 						<h3 class="session-title">株式会社内田洋行様　ご登壇予定</h3>
 						<p class="time">[12:15-12:25]</p>
 					</li>
@@ -303,7 +303,7 @@ layout: default
 						<h3 class="session-title"><a href="#scratch-movesomething" class="js-session-detail-trigger">Scratch とマインクラフト、ドローンやロボットをつなげよう<span class="speaker"> / 石原淳也</span></a></h3>
 						<p class="time">[12:25-12:45]</p>
 					</li>
-					<li class="bg-light duration-15min">
+					<li class="bg-light duration-15min renesas">
 						<h3 class="session-title">ロボット覚醒プロジェクト取り組み紹介<span class="speaker"> / ルネサスエレクトロニクス株式会社　岡宮 由樹 様</h3>
 						<p class="time">[12:50-13:05]</p>
 					</li>
@@ -359,19 +359,19 @@ layout: default
 						<h3 class="session-title">開場・受付</h3>
 						<p class="time">[10:00]</p>
 					</li>
-					<li class="bg-light duration-90min break-20min">
+					<li class="bg-light duration-90min break-20min workshop-1">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">Scratchって何？ 初めてのCoderDojo! −オトナもコドモもニンジャになろう−</a></h3>
 						<p class="time">[10:40-12:10]</p>
 						<p class="description">事前のエントリー（申込）とPCを持参頂く必要があります。<br/>定員：大人６名、子供６名（大人だけ、子供だけでも参加可能です）<p>
 						<p><a href="{{ site.workshop_entryurl_1 }}" class="button button-small button-blue" target="_blank">Entry</a></p>
 					</li>
-					<li class="bg-dark duration-90min break-20min">
+					<li class="bg-dark duration-90min break-20min workshop-2">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">Scratchって何？ 初めてのCoderDojo! −オトナもコドモもニンジャになろう−</a></h3>
 						<p class="time">[12:30-14:00]</p>
 						<p class="description">事前のエントリー（申込）とPCを持参頂く必要があります。<br/>定員：大人６名、子供６名（大人だけ、子供だけでも参加可能です）</p>
 						<p><a href="{{ site.workshop_entryurl_2 }}" class="button button-small button-blue" target="_blank">Entry</a></p>
 					</li>
-					<li class="bg-light duration-90min break-20min">
+					<li class="bg-light duration-90min break-20min workshop-3">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">Scratchって何？ 初めてのCoderDojo! −オトナもコドモもニンジャになろう−</a></h3>
 						<p class="time">[14:20-15:50]</p>
 						<p class="description">事前のエントリー（申込）とPCを持参頂く必要があります。<br/>定員：大人６名、子供６名（大人だけ、子供だけでも参加可能です）</p>
