Improve styles for long titles

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ layout: default
 						<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-session-detail-trigger">CoderDojo Kodairaの活動について<span class="speaker"> / とがぞの</span></a></h3>
 						<p class="time">[13:45-14:05]</p>
 					</li>
-					<li class="bg-light duration-25min">
+					<li class="bg-light duration-25min programming-schools-discussion">
 						<h3 class="session-title"><a href="#programming-schools-discussion" class="js-session-detail-trigger">有償と無償で何が違う？<br>プログラミング教室/コミュニティー運営座談会<span class="speaker"> / 倉本 大資、谷岡 広樹、橋爪 香織、安川 要平</span></a></h3>
 						<p class="time">[14:10-14:35]</p>
 					</li>
