Add individual supporters

--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@ layout: default
 				<li>Mitsuko Nakayama</li>
 				<li>shinichiN</li>
 				<li>Junko Nukaga</li>
+				<li>Daisuke Matsushima</li>
+				<li>kwaka1208</li>
 			</ul>
 		</div>
 <!-- 		<p class="become-a-sponsor-outer">
